TestRepo2/src/objects/FollowContent__c.object
<CustomObject>
    <fields>
        <fullName>Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Description</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>FollowContents</relationshipLabel>
        <relationshipName>FollowContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File</label>
        <referenceTo>File__c</referenceTo>
        <relationshipLabel>FollowContents</relationshipLabel>
        <relationshipName>FollowContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FollowContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FollowContent</label>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>FollowContent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FollowContents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>